--- a/4441332709.html
+++ b/4441332709.html
@@ -42,7 +42,7 @@
 </head>
 <body>
     <h1>사치</h1>
-    <p style="text-align: center; font-style: italic;">달목</p>
+    <p style="text-align: left; font-style: italic;">달목</p>
     
     <div class="content">
       
