--- a/4441332709.html
+++ b/4441332709.html
@@ -41,7 +41,7 @@
     </script>
 </head>
 <body>
-    <h1>사치</h1>
+    <h1 style="text-align: left">사치</h1>
     <p style="text-align: left; font-style: italic;">달목</p>
     
     <div class="content">
