--- a/4441332709.html
+++ b/4441332709.html
@@ -18,7 +18,7 @@
             margin-bottom: 20px;
         }
         .content {
-            white-space: pre-line;
+            white-space: pre-wrap;
         }
     </style>
     <script>
@@ -45,7 +45,7 @@
     <p style="text-align: left; font-style: italic;">달목</p>
     
     <div class="content">
-        <p style="white-space: pre;">
+
       
  아침부터 교문 앞이 빼곡했다. 학기 첫 주부터 학생주임이 직접 교문 단속을 한다는 사실을 잊고 있었다. 교문으로 우르르 들어가는 애들 무리마다 학주가 골라내는 애들이 한두명씩 꼭 나왔다. 누구는 크로스백을 메서, 누구는 코트 속에 명찰이 없어서, 누구는 넥타이를 매지 않아서, 누구는 어깨에 닿을 만큼 긴 머리를 묶지 않아서, 누구는 귀걸이를 해서. 발목 양말을 신은 김민정도 예외는 아닐 것이다. 민정은 교문으로 향하는 오르막길에서 연신 주머니를 뒤졌다. 발목을 덮는 학생용 양말 같은 게 주머니에 있을 리 없다. 복장 불량은 형이 셌다. 꼼짝없이 아침부터 엎드려서 빠따를 맞아야 할 것이다. 평범하게 회초리만 써도 좋을 텐데, 학주는 미니 하키스틱을 들고 다녔다. 맞아본 적은 없지만 애들의 증언에 의하면 기분이 더럽게 아프다고 했다. 망했네 싶어서 터덜터덜 걸었다. 엉덩이를 괜히 문질러보는데 누가 뒤에서 툭 어깨를 친다. 뭐지 싶어서 돌아보았다. 그보다 전에 손에 뭉텅 쥐여 주는 게 있었다. 
 
@@ -898,7 +898,6 @@
 
 <h3 style="text-align: right">끝</h3>
 
-            </p>
     </div>
 </body>
 </html>
