--- a/4441332709.html
+++ b/4441332709.html
@@ -20,6 +20,11 @@
         .content {
             white-space: pre-wrap;
         }
+        .center {
+        display: block;  /* 블록 요소로 만들어서 가로 정렬 가능 */
+        text-align: center;
+        }
+        
     </style>
     <script>
         // 마우스 오른쪽 클릭 방지
@@ -112,7 +117,7 @@
  민정은 가만히 고개를 끄덕였다. 묵직해진 기름통을 든 유지민은 ‘오’ 하는 입 모양으로 조그만 머리통을 주억거리다 씩 웃었다. 불현듯 유지민의 첫인상이 생각난다. 짝언니 보러 가자던 최경아한테 반쯤 끌려서 2학년 교실로 올라갔던 날, 맨 뒷자리에 앉아 턱을 괴고 있던 날카로운 옆얼굴. 네 짝언니 되게 예쁜데 무척 무서울 것 같다고 이야기를 나눴던 것도 같다. 살짝 겁먹었던 최경아도 바짝 쫄아선 겨우 ‘선배님’하고 유지민을 불렀는데, 그때 유지민은 최경아가 짝동생이라는 걸 확인하자마자 느슨해지는 얼굴로 후두둑 웃었다. 지금과 꼭 닮은, 허물어지듯 웃는 얼굴. 정작 허물어진 건 이쪽일지도 모른다. 김민정은 저도 모르게 미소를 짓는다. 그 모습을 가만 지켜보던 유지민이 잠깐 머뭇거리다 입을 열었다.
 
 
-***
+<span class="center">***</span>
 
 
  너 춤추는 거 꼭 보러 갈게.
@@ -166,7 +171,7 @@
  먹어. 건네는 젓가락을 얼떨떨한 채로 받아들었다. 괜히 목이 타는데 손에 잡히는 건 종이컵에 받아준 어묵 국물 뿐이다. 따끈한 국물이 속을 덥히는 탓인지 가슴께를 긁고 싶은 기분이 들었다. 바삭바삭한 김말이를 깨물어 먹다가 눈이 마주친 유지민이 또 씩 웃었다. 입에 김말이 튀김을 물고 있어서 그런 건지는 몰라도 조금 바보 같은 얼굴이었다. 그럼에도 자꾸 무언가 말을 하고 싶어져서, 민정은 한참을 망설이다 결심하듯 말했다.
 
 
-***
+<span class="center">***</span>
 
 
  예뻐요, 언니는.
@@ -231,7 +236,7 @@
  유지민은 머쓱한지 씩 웃었다. 그럼 저도 안아주세요, 해볼까? 김민정은 속으로만 생각했다.
 
 
-***
+<span class="center">***</span>
 
 
  장갑과 목도리를 돌려줘야 하는데, 3월 말이 가까워지면서 기름보관소에 갈 일이 없었다. 물어물어 유지민의 교실까지 가봤지만 운동부가 일과 시간에 교실에 있을 리 만무했다. 그렇다고 훈련하는 수영장에 대뜸 들어갈 수도 없는 노릇이었다. 유지민의 장갑과 목도리는 결국 김민정의 사물함에 곱게 정리된 채 놓이게 됐다.
@@ -255,7 +260,7 @@
  다른 날이었으면 괜찮다고 했을 것이다. 고개를 끄덕인 건 유지민 때문이다. SES 좋아하냐고 묻던 게 떠올라서. 짝꿍이 건네주는 이어폰 한 쪽을 받아서 귀에 꼈다. 유지민은 SES를 좋아하는 걸까? 잡지에서 말한 좋아하는 애가 차라리 SES 멤버였으면 좋겠다는 생각이 들었다. 그런 생각이 조금 이상하게 느껴진 건 귀에 꽂은 이어폰에서 아임 유어 걸 어쩌고 하는 가사가 귀에 박힌 다음이었다. 유지민이 좋아하는 애가 누구든 무슨 상관인가 싶은 거다. 민정은 라디오에서 흐르는 노래를 한 귀로 듣고 흘리며 연필로 조그맣게 낙서를 했다. 
 
 
-***
+<span class="center">***</span>
 
 
  아직도 좋아할까? 
@@ -352,7 +357,7 @@
  한 달은 버스를 타고 다녀야 한다고 했다. 일주일에 6일. 한 달이면 24일. 24일 동안 버스를 타려면 회수권 비용이 얼마일까. 엄마는 저가 걸어 다니는 걸 알면서도 별다른 이야기를 하지 않는다. 대신 학교를 옮길 궁리를 하고 있다. 어쩌면 정말 학교를 옮기게 되지 않을까? 아껴놓은 회수권을 생각하던 김민정은 잡고 있는 손을 가볍게 흔드는 유지민을 가만 바라보았다. 보채듯 귀엽게 짓는 표정이 마음을 쿡 찌른다. 별수 없이 고개를 끄덕였다.
 
 
-***
+<span class="center">***</span>
 
 
  담임과 면담을 하고 야자를 빼기로 했다. 집안이 어려워져서 아르바이트를 해야 할 것 같다고 했다. IMF때문에 집이 멀리 이사했다는 사실을 알고 있던 터라, 담임은 딴지 한 번 걸지 않고 그냥 순순히 야자를 빼주었다. 대신 위로 비슷한 말을 해주며 그래도 학업에 소홀하면 안 된다고 일러주었다. 마침 걸어서 등교할 때 지나는 주유소에서 아르바이트를 구한다길래, 바로 면접을 보고 일을 하기로 했다. 주유소 사장은 예쁜 여학생이 집안 사정을 생각하는 게 기특하다며 학교 끝나고 바로 와서 밤까지 일하면 된다고 했다. 고민했던 것보다 일이 일사천리였다. 시간당 960원. 스무살이 넘어야 1000원을 넘게 줄 수 있다고 해서 처음으로 나이가 원망스러웠다. 그래도 일주일이면 한 달 치 회수권을 살 만큼은 벌 수 있었다. 
@@ -447,7 +452,7 @@
  그러잖아도 내내 서서 일했던 주말의 여파가 몸에 고스란히 느껴지던 차였다. 네에. 대답하고 무심코 창 쪽으로 고개를 가누려다 곁을 돌아보았다. 무슨 생각을 하는지 정면을 보고 있는 유지민이 조금 얄밉게 느껴졌다. 가느다란 어깨에 옆통수를 기댔다. 굳어버리는 몸이 귀엽다는 생각을 한 것도 같다.
 
 
-***
+<span class="center">***</span>
 
 
  아침마다 버스에서 유지민을 만났다. 등교하는 6일 너닷새정도는 꼭 유지민이 김민정이 사는 동네 정류장까지 찾아왔다. 아침에 사람 많은 버스에서 못 만날까 봐 그랬다는데 사실 완벽하게 납득가는 해명은 아니었다. 다만 (해명할 일도 아니라지만) 해명하는 유지민의 모습에는 어딘지 필사적인 데가 있어서, 김민정은 무어라 딴지를 거는 대신 그냥 가만히 고개를 끄덕였다. 같이 학교에 가고 싶다는 이유로 등굣길에 하루치 회수권을 다 써버리는 건 김민정의 입장에선 꽤 사치스러운 일이었다. 무엇이든 야금야금 잃기만 하는 나날에 눈에 보이지 않는 것을 이토록 선명하게 받고 있는 기분이란. 김민정은 부쩍 저가 이기적이라는 생각을 하고 있었다. 집 가까운 정류장에서 순하게 웃으며 손을 흔드는 유지민을 볼 때면 좋다가도 마음이 무거워졌다.
@@ -505,7 +510,7 @@
  무어라 대답할 듯 말듯, 망설이던 유지민은 버스가 오자 먼저 몸을 일으켰다. 회수권을 내고 사람 많은 버스에 타면서도 깍지 낀 손엔 내내 힘이 들어가 있었다. 사람들이 꾸역꾸역 밀려들어도, 버스에서 내려도, 정문으로 가는 오르막을 오르면서도 슬슬 축축해지는 손은 풀릴 줄을 몰랐다. 유지민이 체육관으로, 저가 본관으로 들어갈 때가 되어서야 아쉽게 떨어졌다. 교실로 터벅터벅 올라와 책상에 앉자마자 잠에서 깨듯 정신이 들었다. 이게 사치가 아니면 다 무어겠냐고.
 
 
-***
+<span class="center">***</span>
 
 
  사치가 꼭 대단한 걸 사야 하는 것만은 아니라는 사실은 아침마다 유지민을 만나며 배우고 있었다. 굳이 아침마다 이 동네까지 찾아와주는 사람을 애써서 말리지 않는 것도, 그 사람과 같이 정류장에 앉아 버스를 기다리는 것도, 하나 먹을래? 라며 초콜릿이니 사탕이니 하는 주전부리를 내미는 걸 받아먹는 것도, 나란히 손을 잡고 학교에 가는 것도 죄다 사치스러운 짓이었다. 그냥 눈 딱 감고 부모님이 원하는 대로 전학을 가도 되는 걸, 그게 싫어서 굳이 아르바이트를 하는 것부터가 그랬다. 
@@ -595,7 +600,7 @@
  보러 가겠다고 했는데. 민정은 날짜를 헤아렸다. 토요일 오후. 아르바이트를 하면 보러 갈 수 있을까? 회수권 사치도 이제 끝낼 작정인데, 아르바이트 하루쯤 빠지는 건 괜찮지 않을까. 접겠다는 생각에 못까지 박아놓고 경기를 보고 싶은 생각이 드는 게 좀 웃기기는 했다. 김민정은 이렇다 할 대답도 못하고 그냥 입술만 꾹 말아 물었다. 
 
 
-***
+<span class="center">***</span>
 
 
  “민정아.”
@@ -663,7 +668,7 @@
 대답할 짬도 주지 않고 그냥 교실로 돌아와 버렸다. 유지민이 너를 왜 보자고 했냐고 묻는 애들에게는 그냥 그 언니한테 빌린 게 있었다고 둘러댔다. 틀린 말도 아니었다. 그 이야기를 하다가 신고 있는 양말이 유지민이 냅다 쥐여줬던 그 양말이라는 걸 깨달았기 때문이다. 그래도 이거 하나 정도는 가지고 있어도 되지 않나. 김민정은 울적한 생각을 하다 터덜터덜 자리로 돌아가 앉았다. 4층에 있는 교실에서 창밖을 내다보았다. 이 높이에 서서 뛰어내린다는 유지민, 손목 발목이 성치 않다는 유지민. 유지민에게 무슨 말을 하고 왔는지도 모르겠는 와중에 딱 하나 알겠는 건, 다치지 말라는 말 하나만 유지민에게 정말 하고 싶은 말이었다는 사실 뿐이다.   
 
 
-***
+<span class="center">***</span>
 
 
  야금야금 변한 계절은 어느덧 완연한 봄이었다. 영영 피지 않을 것처럼 늑장을 부리던 그늘의 벚꽃까지 화사하게 다 피자 학교에서는 동복 금지령을 내렸다. 동복 마이는 벗어놓고 다들 춘추복만 입고 다니는 시절이 되면, 애들은 선생님들의 눈이 없을 때 야금야금 카디건이나 사복 져지를 걸쳤다. 학주가 교문지도를 서던 날, 나이키 바람막이를 입고 온 애가 잡혀있는 걸 보고 유지민인 줄 알고 깜짝 놀라기도 했다. 
@@ -770,7 +775,7 @@
  부르는 말에는 대답하지 않았다. 유지민도 신경 쓰지 않고 말을 이었다.
 
 
-***
+<span class="center">***</span>
 
 
  넌 진짜 귀여운 것 같아.
@@ -803,7 +808,7 @@
  낮은 높이에서 뛰겠지 생각했던 유지민은 10미터 플랫폼 위를 오른다. 바람막이를 벗고 심호흡을 하는 게 먼 곳에서도 보이는 기분이 들었다. 뛰기 전에 좋아하는 애 사진을 보고 뛴다더니 유지민은 플랫폼에 서고부터 내내 2층을 쳐다보고 있었다. 손을 흔들어볼까. 머뭇거리다 살짝 손바닥을 들었다. 웃는 걸까? 얼핏 웃는다는 생각이 들었는데 확인할 방법이 없었다. 때마침 웅웅 울리는 소리로 유지민의 이름이 불렸기 때문이다. 유지민이 까마득한 플랫폼 끝에 섰다. 저러다 떨어지면 어떡하지. 떨어져야 하는 운동이 맞긴 하지만, 그래도 어떡하지. 손에 땀이 나서 주먹만 꼭 쥐었다. 삐, 하는 신호음이 들렸다. 
 
 
-***
+<span class="center">***</span>
 
  
  “민정.”
