--- a/index.html
+++ b/index.html
@@ -3,13 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>홈페이지</title>
+    <title>main</title>
+    <style>
+        body {
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #000;
+        }
+        img {
+            max-width: 100%;
+            max-height: 100vh;
+            object-fit: contain;
+        }
+    </style>
 </head>
 <body>
-    <h1>환영합니다!</h1>
-    <p>이 웹사이트의 다른 페이지로 이동하세요:</p>
-    <ul>
-        <li><a href="moonightback.html">달목</a></li>
-    </ul>
+    <img src="https://drive.google.com/file/d/1nWnnaPjoyvdwuP4sBUn5vdag4mMije_c/view?usp=drive_link" alt="main">
 </body>
 </html>
