--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     </style>
 </head>
 <body>
-    <img src="https://drive.google.com/file/d/1nWnnaPjoyvdwuP4sBUn5vdag4mMije_c/view?usp=drive_link" alt="main">
+    <img src="https://drive.google.com/uc?export=view&id=1nWnnaPjoyvdwuP4sBUn5vdag4mMije_c" alt="main">
 </body>
 </html>
