--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     </style>
 </head>
 <body>
-    <img src="https://drive.google.com/uc?export=view&id=1nWnnaPjoyvdwuP4sBUn5vdag4mMije_c" alt="main">
+    <img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FFdVzP%2FbtsM17E0t6t%2FSm4K5NMMK99sUmoZJaQIYK%2Fimg.jpg" alt="main">
 </body>
 </html>
