--- a/4250631789.html
+++ b/4250631789.html
@@ -19,6 +19,8 @@
         }
         .content {
             white-space: pre-wrap;
+            text-indent: 2em;
+            line-height: 1.8;
         }
         .center {
         display: block;  /* 블록 요소로 만들어서 가로 정렬 가능 */
