--- a/4250631789.html
+++ b/4250631789.html
@@ -19,7 +19,6 @@
         }
         .content {
             white-space: pre-wrap;
-            line-height: 2.2;
         }
         .center {
         display: block;  /* 블록 요소로 만들어서 가로 정렬 가능 */
@@ -68,6 +67,15 @@
     document.documentElement.style.userSelect = "none";
     document.documentElement.style.webkitUserSelect = "none";
     document.documentElement.style.msUserSelect = "none";
+
+        const el = document.getElementById('textContent');
+  const rawText = el.innerText;
+
+  const paragraphs = rawText.split(/\n\s*\n/); // 빈 줄 기준으로 나눔
+
+  const html = paragraphs.map(p => `<div style="margin-bottom: 1.5em;">${p.trim().replace(/\n/g, "<br>")}</div>`).join("");
+
+  el.innerHTML = html;
 </script>
 
 </head>
@@ -76,7 +84,7 @@
     <h1 style="text-align: left; margin-top: 50px;">루머와 자전거 上</h1>
     <p style="text-align: left; font-style: italic;">스타핏</p>
     
-    <div class="content">
+    <div class="content" id="textContent">
 
 
 
