--- a/3884528839.html
+++ b/3884528839.html
@@ -97,7 +97,7 @@
     <h1 style="text-align: left; margin-top: 50px;">Bear with me</h1>
     <p style="text-align: left; font-style: italic;">참치즈김밥</p>
     
-    <div class="content">
+    <div class="content" id="textContent">
 
 
 요즘 나는 이상하다. 뭐가 이상하냐면, 나를 좀 견디기가 힘들다. 원래 나는 내가 적당히 좋았다. 그 말은 대체로 좋은 편이라는 거다. 물론 싫을 때도 있지만 그건 좀 드문 일이었다. 게다가 나는 안 좋은 것들은 잘 까먹으니까. 살다 보면 어쩔 수 없이 좀 힘들 때가 있는 건 인정, 하지만 요새는 그런 꾸물꾸물한 기분이 시도 때도 없이 올라왔다. 나 스스로를 좀 견디기 힘든 기분. 고 3이 되었기 때문일지도 모른다. 주위를 둘러싼 공기가 일순간에 숨 막히게 빡빡해졌다. 학교도, 회사도. 원하는 게 제대로 되지 않는 게 많아서 그런지 묘하게 자낮이 되어가는 기분이 든다. 
