--- a/5466540837.html
+++ b/5466540837.html
@@ -96,7 +96,7 @@
     <h1 style="text-align: left; margin-top: 50px;">루머와 자전거 下</h1>
     <p style="text-align: left; font-style: italic;">스타핏</p>
     
-    <div class="content">
+    <div class="content" id="textContent">
 
 
 
