--- a/4250631789.html
+++ b/4250631789.html
@@ -28,9 +28,9 @@
           white-space: pre-wrap; /* 줄바꿈 + 스페이스 보존 */
           font-family: "Noto Sans KR", sans-serif;
         }   
-        .paragraph {
-              margin-bottom: 0.5em; /* 문단 사이 간격 */
-            }
+        .paragraph-line {
+            margin-bottom: 0.5em;
+          }
         
     </style>
     <script>
