--- a/3884528839.html
+++ b/3884528839.html
@@ -550,7 +550,7 @@
 
 "소개 안 시켜줄래. 그 태도 별로야."
 "내 태도가 어때서...? 뭐, 마음대로 해."
-"진짜 좋아하는 사람을 만나라고. 좋아하는 사람 없어? 너무 눈 높은 거 아냐? 희정이 언니 정도면 괜찮은데 뭐가 문제야?"
+"진짜 좋아하는 사람을 만나라고. 좋아하는 사람 없어? 너무 눈 높은 거 아냐? 희진이 언니 정도면 괜찮은데 뭐가 문제야?"
 "김민정 너나 잘해 너나. 니가 하는 연애만 진짜고 내가 하는 건 가짜야? 왜, 넌 남자고 난 여자라서?"
 
 내가 먼저 안 좋아했었다 말해놓고는 발끈해버렸다. 김민정은 내 말의 모순을 지적할 생각도 하지 않고 그냥 나를 쳐다보기만 했다. 그게 더 찔렸다. 그리고 무엇보다, 이대로라면 옆집 만화 카페 언니 포지션도 망할 것이란 위기감이 든다. 나는 서둘러 손을 휘저었다. 
