--- a/4250631789.html
+++ b/4250631789.html
@@ -431,8 +431,7 @@
 
   민정은 놀랍다는 듯이 숫자를 되뇌다가 홀린 것처럼 '카페 가입하기'를 클릭했다. 막혀있을 거라 생각했는데 가입이 열려있었다.
 
-<div class="box">
-  우리의 카타리나, NS 엔터테인먼트 연습생 유지민을 응원하는 팬카페입니다. 
+<div class="box">  우리의 카타리나, NS 엔터테인먼트 연습생 유지민을 응원하는 팬카페입니다. 
   밑의 공지를 잘 따라주세요.
 
   •	카페 내의 게시물은 외부로 펌 금지입니다.
@@ -459,8 +458,7 @@
   카페는 딱히 활동이 왕성한 것 같지 않았다. 게시물도 대부분 1, 2년 전의 것이었다. 카페를 둘러보던 민정은 차라리 이 카페가 이렇게 휑한 것이 다행이라는 생각도 했다. 회원 방에 가보니 - 준회원은 읽기만 가능했다. - 역시나 엘리멘탈의 데뷔 티저에 지민이 없다는 것부터 시작된 말들이 많았다.
   민정은 '이게 사실이라면...' 이라는 제목의 게시글을 읽었다. 내용은 형편 없었다. 나름 날카로운 분석을 하겠답시고 글을 쓴 것 같기는 했는데, 아까 점심시간에 혜지가 말한 루머를 가지고 분석한 것이나 다름 없었다.
 
-<div class="box">
-  지민이에게 떠도는 소문이 사실이라면 회사에서는 이 갈고 내보내는 걸그룹에 위험 요소를 굳이 포함하고 싶지는 않았겠죠;;; 물론... 사실이라고 판명된 것은 아닙니다만;;; 우리 카페 말고도 지민이가 당연히 차기 걸그룹에 데뷔한다는 건 기정사실이었잖아요. (이건 나름 공신력 있는 사람에게 회사 내부 정보라고 들은 적 있습니다 자세한 건 말 못합니다 쪽지 사절이요 -_-)
+<div class="box">  지민이에게 떠도는 소문이 사실이라면 회사에서는 이 갈고 내보내는 걸그룹에 위험 요소를 굳이 포함하고 싶지는 않았겠죠;;; 물론... 사실이라고 판명된 것은 아닙니다만;;; 우리 카페 말고도 지민이가 당연히 차기 걸그룹에 데뷔한다는 건 기정사실이었잖아요. (이건 나름 공신력 있는 사람에게 회사 내부 정보라고 들은 적 있습니다 자세한 건 말 못합니다 쪽지 사절이요 -_-)
   아무튼 이런 이유라면 저는 지민이에게 실망입니다 연애는 데뷔하고서도 할 수 있는 거잖아요-_-;; 더군다나 상대도... (댓글로 많이들 말씀해주셔서 상대방 이름은 지웠습니다 그만 욕하세요 법적 조치 취합니다!) 카페에 정 많이 들었고 저 회사도 자주 가서 지민이한테 선물도 주고 했었습니다. 데뷔만 기다린다고 늘 말해줬는데... 본인도 속상하겠지만 저도 참 허탈하네요.
   저는 이만 여기서 나가렵니다... 다들 행복하시길...;;
 </div>
