--- a/5466540837.html
+++ b/5466540837.html
@@ -30,6 +30,21 @@
             border-radius: 8px;       /* 테두리 둥글게 */
             background-color: #f9f9f9; /* 배경색 (선택) */
           }
+         .video-container {
+            position: relative;
+            padding-bottom: 56.25%; /* 16:9 비율 유지 */
+            height: 0;
+            overflow: hidden;
+            max-width: 100%;
+          }
+        
+          .video-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+          }
      </style>
      <script>
          // 마우스 오른쪽 클릭 방지
@@ -1095,6 +1110,14 @@
 
 
 
+    </div>
+    <div class="video-container">
+      <iframe src="https://www.youtube.com/embed/Kaq4LFM47I0?si=ztj7r0fOC0acEvHV" 
+              title="YouTube video player" 
+              frameborder="0" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+              allowfullscreen>
+      </iframe>
     </div>
 </body>
 </html>
