--- a/5474340855.html
+++ b/5474340855.html
@@ -267,7 +267,7 @@
 
 민웅이 눈을 휘둥그레 떴다. 왜 저래 진짜. 입술이 떡하고 벌어졌다. 그런 말을 한 건 맞아서 아니라고도 못했다. 황당해 지민을 똑바로 쳐다봤다. 그냥 한 소리를 굳이 가져오는 저의를 모르겠다. 민정의 시선을 받은 지민은 별 반응이 없었다. 표정을 읽기가 어려웠다. 이 상황이 재밌다는건가? 아니면 흥미가 떨어졌다는 건가? 눈은 건조한데 입만 웃고 있었다. 민정의 정면에 앉은 민웅의 반응이 더 확실했다. 눈에 띄게 기분 좋아하고 있었다. 좋다 못해 아주 감격을 했다. 
 
-"오빠 생각해주는건 민정이 밖에 없다. 솔직히 지민이 아는 사람이면... 전부 내가 아깝다고 할 텐데."
+"오빠 생각해주는건 민정이 밖에 없다. 솔직히 지민이 아는 사람이면... 전부 지민이가 아깝다고 할 텐데."
 "오빠 주변은 알아? 오빠 여친이 누군지?"
 
 민웅 주변 사람이라도 두사람의 사이를 알면 다행이다. 그 누구도 모르는 연애를 하고 있는 거라면 민정은 민웅이 좀 불쌍할 것 같았다. 
@@ -1169,7 +1169,7 @@
 
 근데 나는 그게 좋았다는 소리야. 나쁜거. 나쁠거면 차라리 지독하게 불순한거.
 
-듣고 있던 민정이 물끄러미 지민을 응시했다. 무슨 생각을 하는지 지민의 얘기를 듣고도 아무런 반응이 없었다. 오빠를 나쁘게 말해서 화가 났나. 지민은 그런 거라면 미안하지만 사과는 할 수 없다고 말할 생각이었다. 오빠 김민웅이 동생 김민정에게 좋은 사람인건 관심이 없었다. 유지민에게 김민웅이 좋은 사람이 아니었다는게 중요했다. 민정이 그런거에까지 관심이 있을지는 의문이었지만. 그래도 지민은 민정이 너무 민웅 편만 들지는 않았으면 좋겠다고 생각했다. 당연한 얘기였다. 지민은 이제 민웅보다 지민이 훨씬 좋았으니까. 비교도 안 될 만큼. 
+듣고 있던 민정이 물끄러미 지민을 응시했다. 무슨 생각을 하는지 지민의 얘기를 듣고도 아무런 반응이 없었다. 오빠를 나쁘게 말해서 화가 났나. 지민은 그런 거라면 미안하지만 사과는 할 수 없다고 말할 생각이었다. 오빠 김민웅이 동생 김민정에게 좋은 사람인건 관심이 없었다. 유지민에게 김민웅이 좋은 사람이 아니었다는게 중요했다. 민정이 그런거에까지 관심이 있을지는 의문이었지만. 그래도 지민은 민정이 너무 민웅 편만 들지는 않았으면 좋겠다고 생각했다. 당연한 얘기였다. 지민은 이제 민웅보다 민정이 훨씬 좋았으니까. 비교도 안 될 만큼. 
 
 나도 비밀이 있어요. 
 
