--- a/5466540837.html
+++ b/5466540837.html
@@ -1109,16 +1109,6 @@
 <루머와 자전거> 完
 
 
-
-후기 쓰러가기 >> https://naver.me/5oExY9sM
-
-
-
-
-
-
-
-
     
     </div>
     <div class="video-container">
@@ -1129,5 +1119,12 @@
               allowfullscreen>
       </iframe>
     </div>
+
+
+
+    후기 쓰러가기 >> <a href=" =https://naver.me/5oExY9sM" target="_blank">https://naver.me/5oExY9sM</a>
+
+
+    
 </body>
 </html>
