--- a/3884528839.html
+++ b/3884528839.html
@@ -868,7 +868,7 @@
 
 
 
-후기 쓰러가기 >> https://naver.me/5KbA4ENt
+후기 쓰러가기 >> <a href="https://naver.me/5KbA4ENt" target="_blank">https://naver.me/5KbA4ENt</a>
         
 
     </div>
