--- a/4441332709.html
+++ b/4441332709.html
@@ -904,7 +904,7 @@
 
 
 
-      후기 쓰러가기 >> https://naver.me/GV2qzKGG
+      후기 쓰러가기 >> <a href="https://naver.me/GV2qzKGG" target="_blank">https://naver.me/GV2qzKGG</a>
  
      </div>
  </body>
