--- a/5474340855.html
+++ b/5474340855.html
@@ -1247,7 +1247,7 @@
 
 
 
-        후기 쓰러가기 >> https://naver.me/GJTkPNrx
+        후기 쓰러가기 >> <a href="https://naver.me/GJTkPNrx" target="_blank">https://naver.me/GJTkPNrx</a>
  
 
     </div>
