--- a/end.html
+++ b/end.html
@@ -165,11 +165,18 @@
 많은 분들이 오셔서 재미있게 즐겨주시면 좋겠어요. 저는 칼윈을 알고 나서 인생이 한결 재밌어졌거든요. 취향 같은 사람들 만나기 쉽지 않잖아요. 여러분이 늘 즐겁고 행복하고, 무엇보다 건강하시길 진심으로 바라겠습니다! 
 
 
- <h3 style="text-align: left; margin-top: 50px;">후기</h3>
-  어찌저찌 정말 다 끝이 났네요. 이제 청레 달라고 징징대지 않을게요. 원 없이 청레로 보고 싶은 거 다 봤습니다. (사실 더 원해요)
+
+
+    
+
+    
+
+ <h2 style="text-align: left; margin-top: 50px;">카페 후기</h2>
+  정말 다 끝이 났네요! 이제 청레 달라고 징징대지 않을게요. 원 없이 청레로 보고 싶은 거 다 봤습니다. (사실 더 원해요)
   함께해 주신 모든 분들, 도와주신 모든 분들 정말 감사합니다.
   열심히 준비한 만큼 오셨던 분들이 재밌게 즐겨주셨길 바랍니다.
   저도 준비하면서 너무 재밌었어요.
+    그걸로 됐습니다!
   
 
   
