--- a/end.html
+++ b/end.html
@@ -167,7 +167,7 @@
     
 
  <h2 style="text-align: left; margin-top: 50px;">카페 후기</h2>
-정말 다 끝이 났네요! 이제 청레 달라고 징징대지 않을게요. 원 없이 청레로 보고 싶은 거 다 봤습니다. (사실 더 원해요)
+정말 다 끝이 났습니다! 이제 청레 달라고 징징대지 않을게요. 원 없이 청레로 보고 싶은 거 다 봤습니다. (사실 더 원해요)
 함께해 주신 모든 분들, 도와주신 모든 분들 정말 감사합니다.
 열심히 준비한 만큼 오셨던 분들이 재밌게 즐겨주셨길 바랍니다.
 저도 준비하면서 너무 재밌었어요.
