--- a/end.html
+++ b/end.html
@@ -115,7 +115,7 @@
 
   <h3 style="text-align: left; margin-top: 50px;">스타핏</h3>
     <p style="text-align: left; font-style: italic;">Q. 이번 글의 비하인드</p>
-민정이가 지민이에게 남겼던 “몇 년을 찾아다닌 최고의 파트너”라는 메시지만을 보고 쓰게 되었습니다. 그들이 데뷔를 하기까지의 지난 시간을 저는 영원히 알지 못하겠지만, 그래도 조금 알고 있는 검정고시도 같이 보고 데뷔 소식도 같이 들었다는 그 지점 직전까지만 제가 꾸며봤습니다. 그냥 저 멘트가 둘을 잘 설명해주는 것 같았어요. (아 청레 어려워...)
+지민이가 민정이에게 남겼던 “몇 년을 찾아다닌 최고의 파트너”라는 메시지만을 보고 쓰게 되었습니다. 그들이 데뷔를 하기까지의 지난 시간을 저는 영원히 알지 못하겠지만, 그래도 조금 알고 있는 검정고시도 같이 보고 데뷔 소식도 같이 들었다는 그 지점 직전까지만 제가 꾸며봤습니다. 그냥 저 멘트가 둘을 잘 설명해주는 것 같았어요. (아 청레 어려워...)
 
   
   <p style="text-align: left; font-style: italic;">Q. 자신의 글 중 가장 좋아하는 장면이나 대사</p>
