--- a/reviewnightW_hale.html
+++ b/reviewnightW_hale.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>불순의 사각지대 후기</title>
+    <title>불순의 사각지대 리뷰</title>
      <style>
          body {
              font-family: "Noto Sans KR", sans-serif;
