--- a/reviewSsstopittt.html
+++ b/reviewSsstopittt.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>루머와 자전거 리뷰뷰</title>
+    <title>루머와 자전거 리뷰</title>
      <style>
          body {
              font-family: "Noto Sans KR", sans-serif;
@@ -74,7 +74,7 @@
 </head>
 <body>
 
-    <h1 style="text-align: left; margin-top: 50px;">루머와 자전 리뷰</h1>
+    <h1 style="text-align: left; margin-top: 50px;">루머와 자전거 리뷰</h1>
 <div class="content" id="textContent">
 
 
